--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="localstorage.js"></script>
+    <style>
+        .userlogin{
+            display: flex;
+            flex-direction: column;
+            padding: 10px;
+            border: 2px solid black;
+            width: 300px;
+            margin-top: 40px;
+            margin-left: 470px;
+
+        }
+        .userinputs{
+            padding: 5px;
+            border:1px sold black
+        }
+        .btn{
+            background-color: green;
+            color: white;
+            padding: 5px;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
-    <script src="callback.js"></script>
+    <div class="userlogin">
+        <h4><center>User Login</center></h4>
+        Username : <input type="text" name="name" id="name" class="userinputs"/><br>
+        Password : <input type="password" name="password" id="password" value="San@123$$"class="userinputs"/><br>
+        <input type="submit" name="submit" value="Submit" class="btn" onclick="login()">
+
+    </div>
+    
 </body>
 </html>
